# COPASI

./: CMakeLists.txt  configure  configure.in
CMakeModules/: FindCLAPACK.cmake
admin/: configure.in
copasi/: CMakeLists.txt  common.cmake
copasi/bindings/: CMakeLists.txt  bindings.pro
copasi/bindings/python/: CMakeLists.txt
copasi/bindings/swig/: CFitProblem.i  CModel.i  CRenderInformation.i  copasi.i
copasi/compareExpressions/unittests/: CMakeLists.txt
copasi/parameterFitting/: CFitProblem.h
copasi/sbml/unittests/: CMakeLists.txt
